--- a/productmanager.client/src/index.css
+++ b/productmanager.client/src/index.css
@@ -28,7 +28,6 @@
 }
 
 #product-data-content > div {
-  height: 44rem;
   margin: 2rem;
   max-width: 1150px;
 
@@ -48,4 +47,7 @@
     border-radius: 10px;
     margin: 4px;
   }
+}
+#product-data-content > div > div {
+  max-height: 44rem;
 }
